<resources>
    <string name="app_name">TelegramClone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="settings_default_username">Yura Petrov</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_phonenumber">+79111111111</string>
    <string name="settings_label_phone_number">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_default_login">yurapetrov</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_send">Мы отправили SMS с кодом проверки на ваш телефон</string>
    <string name="register_title_phone">Ваш телефон</string>
    <string name="menu_create_group">Создать группу</string>
    <string name="menu_create_secret_chat">Создать секретный чат</string>
    <string name="menu_create_channel">Создать канал</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_calls">Звонки</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_invite_friends">Пригласить друзей</string>
    <string name="menu_help">Вопросы о Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_hint_input_username">username</string>
    <string name="setting_hint_bio">О себе</string>
</resources>